--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cg_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.keiji.app.CreateGameActivity">
@@ -50,7 +51,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player_name_text"
+        app:layout_constraintTop_toBottomOf="@+id/jg_player_name_text"
         app:layout_constraintVertical_bias="0.032" />
 
     <TextView
