--- a/app/src/main/res/layout/activity_main_game.xml
+++ b/app/src/main/res/layout/activity_main_game.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.keiji.app.activities.PlayerListActivity">
+    tools:context="com.example.keiji.app.activities.MainGameActivity">
 
     <ListView
-        android:id="@+id/pl_player_list"
+        android:id="@+id/mg_player_list"
         android:layout_width="334dp"
-        android:layout_height="316dp"
+        android:layout_height="218dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -18,10 +18,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.661" />
+        app:layout_constraintVertical_bias="0.786" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/mg_list_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -34,7 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.214" />
+        app:layout_constraintVertical_bias="0.412" />
 
     <TextView
         android:id="@+id/mg_game_room_name"
@@ -68,7 +68,7 @@
         app:layout_constraintVertical_bias="0.134" />
 
     <TextView
-        android:id="@+id/pl_game_room_name_view"
+        android:id="@+id/mg_game_room_name_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -81,7 +81,7 @@
         app:layout_constraintStart_toEndOf="@+id/mg_game_room_name" />
 
     <TextView
-        android:id="@+id/pl_player_name_view"
+        android:id="@+id/mg_player_name_view"
         android:layout_width="wrap_content"
         android:layout_height="21dp"
         android:layout_marginEnd="8dp"
@@ -94,7 +94,7 @@
         app:layout_constraintStart_toEndOf="@+id/mg_player_name" />
 
     <Button
-        android:id="@+id/pl_start_game_button"
+        android:id="@+id/mg_start_game_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
