Fixed rules with latest master

--- a/app/src/main/res/layout/fragment_sherif_rules.xml
+++ b/app/src/main/res/layout/fragment_sherif_rules.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/sherif_view"
+        android:id="@+id/sheriff_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
