--- a/app/src/main/res/layout/fragment_general_rules.xml
+++ b/app/src/main/res/layout/fragment_general_rules.xml
@@ -4,13 +4,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="201dp"
+        android:layout_above="@+id/sheriff_view"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-273dp"
+        android:src="@drawable/general" />
+
     <TextView
         android:id="@+id/general_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="311dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
         android:maxLines="200"
         android:scrollbars="vertical"
         android:text="@string/rules_general"
