--- a/app/src/main/res/layout/fragment_mafia_rules.xml
+++ b/app/src/main/res/layout/fragment_mafia_rules.xml
@@ -6,14 +6,23 @@
 
     <TextView
         android:id="@+id/mafia_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="353dp"
+        android:layout_height="215dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="296dp"
         android:maxLines="200"
         android:scrollbars="vertical"
         android:text="@string/rules_mafia"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="232dp"
+        android:layout_height="247dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="48dp"
+        android:src="@drawable/mafia2" />
 </RelativeLayout>
