--- a/app/src/main/res/layout/fragment_sherif_rules.xml
+++ b/app/src/main/res/layout/fragment_sherif_rules.xml
@@ -4,13 +4,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="232dp"
+        android:layout_height="247dp"
+        android:layout_above="@+id/sheriff_view"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-273dp"
+        android:src="@drawable/detective" />
+
     <TextView
         android:id="@+id/sheriff_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="273dp"
         android:maxLines="200"
         android:scrollbars="vertical"
         android:text="@string/rules_sheriff"
