--- a/app/src/main/res/layout/fragment_vilager_rules.xml
+++ b/app/src/main/res/layout/fragment_vilager_rules.xml
@@ -4,13 +4,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="232dp"
+        android:layout_height="247dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="31dp"
+        android:src="@drawable/villager" />
+
     <TextView
         android:id="@+id/villager_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="215dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="296dp"
         android:maxLines="200"
         android:scrollbars="vertical"
         android:text="@string/rules_villager"
